syntax = "proto3";

package equipment.service.v1;

import "google/api/annotations.proto";

option go_package = "github.com/open-farms/inventory/api/equipment/service/v1;v1";
option java_multiple_files = true;
option java_package = "equipment.service.v1";

service EquipmentService {
	rpc CreateEquipment (CreateEquipmentRequest) returns (CreateEquipmentReply){
		option (google.api.http)= {
			post: "/equipment",
			body: "equipment",
		};
	};

	rpc UpdateEquipment (UpdateEquipmentRequest) returns (UpdateEquipmentReply){
		option (google.api.http)= {
			put: "/equipment/{id}",
			body: "equipment",
		};
	};

	rpc DeleteEquipment (DeleteEquipmentRequest) returns (DeleteEquipmentReply){
		option (google.api.http)= {
			delete: "/equipment/{id}",
		};
	};

	rpc GetEquipment (GetEquipmentRequest) returns (GetEquipmentReply){
		option (google.api.http)= {
			get: "/equipment/{id}",
		};
	};

	rpc ListEquipment (ListEquipmentRequest) returns (ListEquipmentReply){
		option (google.api.http)= {
			get: "/equipment",
		};
	};
}

message Equipment {
	int64 id = 1;
}

message CreateEquipmentRequest {
	Equipment equipment = 1;
}

message CreateEquipmentReply {
	Equipment equipment = 1;
}

message UpdateEquipmentRequest {
	int64 id = 1;
	Equipment equipment = 2;
}

message UpdateEquipmentReply {
	Equipment equipment = 1;
}

message DeleteEquipmentRequest {
	int64 id = 1;
}

message DeleteEquipmentReply {
	Equipment equipment = 1;
}

message GetEquipmentRequest {
	int64 id = 1;
}

message GetEquipmentReply {
	Equipment equipment = 1;
}

message ListEquipmentRequest {}

message ListEquipmentReply {
	repeated Equipment equipment = 1;
}